--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,6 +25,7 @@
               }
             ],
             "styles": [
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/custom-theme.scss",
               "src/styles.css"
             ]
@@ -83,6 +84,7 @@
               }
             ],
             "styles": [
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ]
           }
