feat(backend): add sharp-based image normalization (AVIF/WEBP→JPEG), file type validation and clean error handling in /api/analyze

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,4 +14,4 @@ GOOGLE_VISION_ENDPOINT=https://vision.googleapis.com/v1/images:annotate
 ##########################
 IMAGGA_API_KEY=
 IMAGGA_API_SECRET=
-IMAGGA_ENDPOINT=https://api.imagga.com/v2/tags
+IMAGGA_BASE_URL=https://api.imagga.com/v2/tags
