--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^20.2.13",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
-    "@angular/material": "^20.2.13",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "rxjs": "~7.8.0",
@@ -45,6 +43,11 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "sass-embedded": "^1.93.3",
+    "tailwindcss": "3.4.18",
+    "postcss": "^8.4.49",
+    "autoprefixer": "^10.4.20",
     "typescript": "~5.9.2"
-  }
+  },
+  "overrides": {}
 }
