--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,7 @@
     "moduleResolution": "NodeNext",
 
     "lib": ["ES2022"],
-    "types": ["node"],
+    "types": ["vitest", "node"],
 
     "sourceMap": true,
     "declaration": true,
